deploy/overlays/local/node-vitala/components/portal-gateway/portal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: vitala-portal-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: portal.vitala.local.dh.unimaas.nl
    - name: http
      port: 80
      protocol: HTTP
      hostname: portal.vitala.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vitala-portal-route
  namespace: dh-health
spec:
  parentRefs:
    - name: vitala-portal-gateway
  hostnames:
    - portal.vitala.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vitala-portal
          port: 3000
